--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
+    "classnames": "^2.2.6",
     "sass": "^1.32.6"
   }
 }
