feat: update component name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-preview-cover",
+  "name": "bilibili-sprite-preview",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
