feat: add deploy

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bilibili-sprite-preview",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://haixiang6123.github.io/bilibili-sprite-preview",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +45,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.11",
     "classnames": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "sass": "^1.32.6"
   }
 }
