--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bilibili-sprite-preview",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://haixiang6123.github.io/bilibili-sprite-preview",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
